# rag2f_openai_embedder

./: .gitignore  .gitmodules  CONFIG.md  MANIFEST.in  README.md  __init__.py  _version_template.py  config.json.example  plugin.json  pyproject.toml  version_hook.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci-dev-testpypi.yml  release-tags.yml
rag2f_openai_embedder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build-local.sh  test_release_setup.sh
src/: __init__.py  embedder.py
src/rag2f_openai_embedder/: __init__.py  bootstrap_hook.py  embedder.py  plugin_context.py  plugin_overrides.py
test/: conftest.py  test_bootstrap_hook.py  test_embedder_unit.py
tests/: conftest.py  test_bootstrap_hook.py  test_embedder_unit.py
